--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,4 +4,5 @@ server.servlet.context-path=/api/v1/
 spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
 
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 spring.data.mongodb.uri=mongodb://backend:devpw@localhost:27017/emercast?retryWrites=true&w=majority&authSource=admin
