--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,9 @@ spring.application.name=Emercast Backend
 server.servlet.context-path=/api/v1/
 spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
+emercast.cors.allowed.url=http://localhost:3000
+emercast.jwt.private-key=ajkdnalidhqauildh139uihe89p1h3r
+emercast.jwt.expiration=6000000
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 spring.data.mongodb.uri=mongodb://backend:devpw@localhost:27017/emercast?retryWrites=true&w=majority&authSource=admin
