--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.2.0'
 	implementation 'org.mongodb:mongodb-driver-sync:4.11.1'
 	implementation 'org.mongodb:mongodb-driver-core:4.11.1'
+	implementation 'io.jsonwebtoken:jjwt:0.12.3'
 
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.4'
 	implementation 'io.swagger:swagger-annotations:1.6.8'
