--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,6 +3,6 @@ spring.application.name=Emercast Backend
 server.servlet.context-path=/api/v1/
 spring.data.mongodb.uuid-representation=standard
 spring.data.mongodb.auto-index-creation=true
-emercast.jwt.expiration=6000000
+emercast.jwt.expiration=31536000000000
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
